buildscript {
    ext {
        springBootVersion = '2.1.3.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'idea'
apply plugin: 'eclipse'




ext {
    //springFrameworkVersion = '4.3.11.RELEASE'
    springBootVersion = '2.1.3.RELEASE'
    //springAmqpVersion = '2.0.4.RELEASE'
    swaggerVersion = '2.9.2'
    //JAXB_VERSION = '2.3.0'
    jacksonVersion = "2.9.4"
}
allprojects {
    group = 'io.github.alphajiang'
    version = '0.0.1-SNAPSHOT'
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    sourceCompatibility = JavaVersion.VERSION_1_10
    targetCompatibility = JavaVersion.VERSION_1_10

    compileJava {
        options.encoding = "UTF-8"
    }


    test.onlyIf { ! Boolean.getBoolean('skipTests') }

    repositories {
        maven { url 'http://maven.aliyun.com/mvn/repository/' }
        jcenter()
    }
    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1"
        }
    }

}


subprojects {
    tasks.withType(AbstractCompile) {
        options.compilerArgs += ["--add-modules", "java.xml.bind"]
    }

    tasks.withType(Test) {
        jvmArgs += ["--add-modules", "java.xml.bind"]
    }

    configurations.all {
        exclude module: 'spring-boot-starter-logging'
    }

    dependencies {
        implementation("org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}")
        implementation("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")

        //implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
        //implementation('org.springframework.cloud:spring-cloud-bus')
        //implementation('org.springframework.cloud:spring-cloud-starter-bus-amqp')

        compile('com.fasterxml.jackson.core:jackson-core')
        compile('com.fasterxml.jackson.core:jackson-annotations')
        compile('com.fasterxml.jackson.core:jackson-databind')
        compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jacksonVersion}")
        compile("io.springfox:springfox-core:${swaggerVersion}")
        compile("io.springfox:springfox-swagger2:${swaggerVersion}")
        compile('io.swagger:swagger-annotations')
        //compile('org.apache.commons:commons-lang3:3.6')
        //compile('org.apache.commons:commons-collections4:4.1')
        //compile('org.apache.commons:commons-text:1.1')
        //compile('org.apache.commons:commons-digester3:3.2')
        //compile('commons-io:commons-io:2.5')


        //compile('org.aspectj:aspectjweaver:1.8.0')


        testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
        testCompile group: 'junit', name: 'junit', version: '4.12'
    }
}




//dependencies {
//
//    implementation project(':valet-model')
//    implementation project(':valet-common')
//    compile('org.springframework.boot:spring-boot-starter-data-rest')
//}
